--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,16 +19,20 @@ jobs:
         with:
           python-version: 3.9
       - name: Load Poetry cache
+        id: poetry-cache
         uses: actions/cache@v2
         with:
           path: ~/.poetry
           key: poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
       - name: Config path and poetry
+        if: steps.poetry-cache.outputs.cache-hit == 'true'
         run: |
           echo "$HOME/.poetry/bin" >> $GITHUB_PATH
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Build documentation
         run: |
+          export POETRY_HOME=$HOME/.poetry
+          export POETRY_CACHE_DIR=$HOME/.poetry/store
           make docs
           echo "docs_build_name=docs-$(cat TAG)-$GITHUB_SHA" >> $GITHUB_ENV
       - name: Archive build artifacts
