[skip-k8s] Test with using startsWith

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,8 +13,8 @@ jobs:
   # event and skips it. For instance there is no need to run the same pipeline
   # twice for pull_request and push for identical commit sha.
   pre_job:
+    if: ${{ !startsWith(github.event.head_commit.message, '[skip-k8s]') }}
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, '[skip-k8s]') }}
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
