--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -13,11 +13,18 @@ jobs:
   # event and skips it. For instance there is no need to run the same pipeline
   # twice for pull_request and push for identical commit sha.
   pre_job:
-    if: ${{ !startsWith(github.event.commits[0].message, '[skip-k8s]') }}
+    if: !startsWith(github.event.head_commit.message, '[skip-k8s]')
     runs-on: ubuntu-latest
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
     steps:
+      - name: Debug
+        run: |
+          echo "${{ github.event.commits[0].message }}"
+          echo "${{ github.event.head_commit.message }}"
+          echo "${{ github.event }}"
+          echo "${{ !startsWith(github.event.commits[0].message, '[skip-k8s]') }}"
+          echo "${{ !startsWith(github.event.head_commit.message, '[skip-k8s]') }}"
       - id: skip_check
         uses: fkirc/skip-duplicate-actions@v3.4.1
         with:
