--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 python = "^3.7"
 cookiecutter = "~1.7.3"
 click = "~7.1.2"
+uvicorn = {extras = ["standard"], version = "~0.17.4"}
 
 [tool.poetry.dev-dependencies]
 pytest = "~6.2.5"
