Update fastapi-mvc.ini test file values

--- a/tests/unit/data/fastapi-mvc.ini
+++ b/tests/unit/data/fastapi-mvc.ini
@@ -1,7 +1,7 @@
 [project]
-folder_name = foobar
-package_name = foobar
-script_name = foobar
+folder_name = test-app
+package_name = test_app
+script_name = test-app
 redis = yes
 github_actions = yes
 aiohttp = yes
@@ -9,4 +9,4 @@ vagrantfile = yes
 helm = yes
 
 [fastapi-mvc]
-version = 0.7.0
+version = x.y.z
