--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,6 @@
 [run]
 omit =
+    fastapi_mvc/generators/controller/template/*
+    fastapi_mvc/generators/generator/template/*
     fastapi_mvc/template/*
     fastapi_mvc/__main__.py
