--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "fastapi-mvc"
 version = "0.10.0"
-description = "Create and develop production grade FastAPI projects."
+description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
 authors = ["Radosław Szamszur <radoslawszamszur@gmail.com>"]
 license = "MIT"
 readme = "README.md"
