Extend and improve k8s integration workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,32 +23,59 @@ jobs:
           skip_after_successful_duplicate: 'true'
           concurrent_skipping: same_content
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
-  test:
+  install:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: macos-10.15
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 3.9
+      - name: Init Poetry cache
+        id: cached-poetry
+        uses: actions/cache@v2
+        with:
+          path: ~/.poetry
+          key: ${{ runner.os }}-poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install package
         run: |
           export POETRY_HOME=$HOME/.poetry
           export POETRY_CACHE_DIR=$HOME/.poetry/store
           make install
+        if: steps.cached-poetry.outputs.cache-hit != 'true'
+  test-redis-ha:
+    needs: install
+    runs-on: macos-10.15
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.poetry
+          key: ${{ runner.os }}-poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
       - name: Config path and poetry
         run: |
           echo "$HOME/.poetry/bin" >> $GITHUB_PATH
           $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
       - name: Generate test-project
         run: poetry run fastapi-mvc new test-project
+      - name: Load/Init Vagrant cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.vagrant.d/boxes
+          key: vagrant-${{ hashFiles('test-project/Vagrantfile') }}
       - name: Run vagrant up
         run: |
-         cd test-project
-         vagrant up
+          cd test-project
+          vagrant up
       - name: Bootstrap minukube cluster and Redis operator
         run: |
           cd test-project
@@ -57,3 +84,91 @@ jobs:
         run: |
           cd test-project
           vagrant ssh -c 'curl "http://test-project.$(minikube ip).nip.io/api/ready"'
+  test-minimal:
+    needs: install
+    runs-on: macos-10.15
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.poetry
+          key: ${{ runner.os }}-poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Config path and poetry
+        run: |
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+      - name: Generate test-project
+        run: poetry run fastapi-mvc new --skip-redis --skip-aiohttp --skip-actions test-project
+      - name: Load/Init Vagrant cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.vagrant.d/boxes
+          key: vagrant-${{ hashFiles('test-project/Vagrantfile') }}
+      - name: Run vagrant up
+        run: |
+          cd test-project
+          vagrant up
+      - name: Bootstrap minukube cluster
+        run: |
+          cd test-project
+          vagrant ssh -c "cd /syncd && make dev-env"
+      - name: Test exposed fastapi_mvc application
+        run: |
+          cd test-project
+          vagrant ssh -c 'curl "http://test-project.$(minikube ip).nip.io/api/ready"'
+  test-generators:
+    needs: install
+    runs-on: macos-10.15
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Load Poetry cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.poetry
+          key: ${{ runner.os }}-poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Config path and poetry
+        run: |
+          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+      - name: Generate test-project
+        run: poetry run fastapi-mvc new --skip-redis --skip-aiohttp --skip-actions test-project
+      - name: Load/Init Vagrant cache
+        uses: actions/cache@v2
+        with:
+          path: ~/.vagrant.d/boxes
+          key: vagrant-${{ hashFiles('test-project/Vagrantfile') }}
+      - name: Generate test controller
+        run: |
+          venv_path=$(poetry env info -p)
+          cd test-project
+          $venv_path/bin/fastapi-mvc generate controller foobar index create:post update:put delete:delete
+      - name: Run vagrant up
+        run: |
+          cd test-project
+          vagrant up
+      - name: Bootstrap minukube cluster
+        run: |
+          cd test-project
+          vagrant ssh -c "cd /syncd && make dev-env"
+      - name: Test exposed fastapi_mvc application
+        run: |
+          cd test-project
+          vagrant ssh -c 'curl "http://test-project.$(minikube ip).nip.io/api/ready"'
+      - name: Test generated foobar controller
+        run: |
+          cd test-project
+          vagrant ssh -c 'curl "http://test-project.$(minikube ip).nip.io/api/foobar/index"'
+          vagrant ssh -c 'curl -X POST "http://test-project.$(minikube ip).nip.io/api/foobar/create"'
+          vagrant ssh -c 'curl -X PUT "http://test-project.$(minikube ip).nip.io/api/foobar/update"'
+          vagrant ssh -c 'curl -X DELETE "http://test-project.$(minikube ip).nip.io/api/foobar/delete"'
