--- a/fastapi_mvc/template/{{cookiecutter.folder_name}}/Vagrantfile
+++ b/fastapi_mvc/template/{{cookiecutter.folder_name}}/Vagrantfile
@@ -2,6 +2,7 @@
 # vi: set ft=ruby :
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
+  config.vm.define "{{cookiecutter.folder_name}}"
   config.vm.provider "virtualbox" do |vb|
       vb.memory = "4096"
       vb.cpus = "2"
