--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ flake8 = "3.9.2"
 flake8-docstrings = "~1.6.0"
 flake8-import-order = "~0.18.1"
 flake8-todo = "^0.7"
-black = "^21.12b0"
+black = "^22.3.0"
 mock = "^4.0.3"
 Sphinx = "^4.5.0"
 Pallets-Sphinx-Themes = "^2.0.2"
