--- a/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/fastapi-mvc.ini
+++ b/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/fastapi-mvc.ini
@@ -2,11 +2,10 @@
 folder_name = {{ cookiecutter.folder_name }}
 package_name = {{ cookiecutter.package_name }}
 script_name = {{ cookiecutter.script_name }}
+helm = {{ cookiecutter.helm }}
+chart_name = {{ cookiecutter.chart_name }}
 redis = {{ cookiecutter.redis }}
 github_actions = {{ cookiecutter.github_actions }}
-aiohttp = {{ cookiecutter.aiohttp }}
-vagrantfile = {{ cookiecutter.vagrantfile }}
-helm = {{ cookiecutter.helm }}
 
 [fastapi-mvc]
 version = {{ cookiecutter.fastapi_mvc_version }}
