Update ini parser properties

--- a/tests/unit/data/fastapi-mvc.ini
+++ b/tests/unit/data/fastapi-mvc.ini
@@ -2,11 +2,10 @@
 folder_name = test-app
 package_name = test_app
 script_name = test-app
+helm = yes
+chart_name = test-app
 redis = yes
 github_actions = yes
-aiohttp = yes
-vagrantfile = yes
-helm = yes
 
 [fastapi-mvc]
 version = x.y.z
