Escape non cookiecutter variables

--- a/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/.github/workflows/docs.yml
+++ b/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/.github/workflows/docs.yml
@@ -1,3 +1,4 @@
+{%- raw %}
 name: Build Docs
 
 on:
@@ -47,3 +48,4 @@ jobs:
           jekyll: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+{%- endraw %}
