--- a/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/Makefile
+++ b/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/Makefile
@@ -39,7 +39,7 @@ integration-test: install ## Run {{cookiecutter.project_name}} integration tests
 	@build/integration-test.sh
 
 .PHONY: docs
-docs: install ## Build {cookiecutter.project_name}} documentation
+docs: install ## Build {{cookiecutter.project_name}} documentation
 	@build/docs.sh
 {% if cookiecutter.helm == "yes" %}
 .PHONY: dev-env
