--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-cookiecutter = ">=1.7.3,<2.2.0"
+cookiecutter = "~2.1.1"
 click = "~8.1.3"
 
 [tool.poetry.dev-dependencies]
