--- a/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/Vagrantfile
+++ b/fastapi_mvc/generators/project/template/{{cookiecutter.folder_name}}/Vagrantfile
@@ -1,8 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/focal64"
-  config.vm.define "{{cookiecutter.folder_name}}"
+  config.vm.box = "debian/bullseye64"
+  config.vm.box_version = "11.20220328.1"
   config.vm.provider "virtualbox" do |vb|
       vb.memory = "4096"
       vb.cpus = "2"
@@ -16,8 +16,11 @@ Vagrant.configure("2") do |config|
       vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
   end
   config.vm.provision "shell", inline: <<-SHELL
-      apt-get update && apt-get upgrade -y
-      apt-get install -y curl docker.io snapd git golang python3 python3-pip python3-venv
+      echo "deb [check-valid-until=no] http://snapshot.debian.org/archive/debian/20220328 bullseye main" > /etc/apt/sources.list
+      echo "deb [check-valid-until=no] http://snapshot.debian.org/archive/debian-security/20220328 bullseye-security main" >> /etc/apt/sources.list
+      echo "deb [check-valid-until=no] http://snapshot.debian.org/archive/debian/20220328 bullseye-updates main" >> /etc/apt/sources.list
+      apt-get update
+      apt-get install --no-install-recommends -y curl make docker.io git golang python3 python3-pip python3-venv
       systemctl enable docker
       # NOTE: Fix resolving DNS in docker
       echo '{ "dns": ["192.168.0.1", "8.8.8.8"] }' > /etc/docker/daemon.json
