--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,11 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+  POETRY_HOME: /opt/poetry
+  POETRY_CONFIG_DIR: /opt/poetry
+  POETRY_VIRTUALENVS_PATH: /opt/poetry/store
+
 jobs:
   # This job checks if an identical workflow is being triggered by different
   # event and skips it. For instance there is no need to run the same pipeline
@@ -33,15 +38,12 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Init Poetry cache
         id: cached-poetry
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
       - name: Install package
-        run: |
-          export POETRY_HOME=$HOME/.poetry
-          export POETRY_CACHE_DIR=$HOME/.poetry/store
-          make install
+        run: make install
         if: steps.cached-poetry.outputs.cache-hit != 'true'
   build:
     needs: install
@@ -54,19 +56,16 @@ jobs:
         with:
           python-version: 3.9
       - name: Load Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-3.9-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
       - name: Build wheel
-        run: |
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-          $HOME/.poetry/bin/poetry build
-          echo "build_name=fastapi_mvc-$(cat TAG)-$GITHUB_SHA" >> $GITHUB_ENV
+        run: $POETRY_HOME/bin/poetry build
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.build_name }}
+          name: ${{ format('fastapi_mvc-{0}', github.sha) }}
           path: dist
           retention-days: 60
   metrics:
@@ -83,14 +82,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Load Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
       - name: Run metrics checks
         run: make metrics
   unit-tests:
@@ -107,14 +102,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Load Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
       - name: Run unit tests
         run: make unit-test
   integration-tests:
@@ -131,22 +122,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Load Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
       - name: Run integration tests
         run: make integration-test
-  generate:
+  project-template-ci:
     needs: install
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
 
     steps:
       - uses: actions/checkout@v2
@@ -155,140 +139,83 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Load Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: poetry-${{ matrix.python-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
-      - name: Init test-project cache
-        id: cached-project
-        uses: actions/cache@v2
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-3.9-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
+      - name: Load fastapi-mvc-example cache
+        id: cached-fastapi-mvc-example
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-        if: steps.cached-project.outputs.cache-hit != 'true'
+          path: ./fastapi-mvc-example
+          key: fastapi-mvc-example-${{ hashFiles('**/project/template/*') }}
       - name: Generate test-project
         run: |
-          poetry run fastapi-mvc new test-project
-          mv test-project ~/.poetry/store
-        if: steps.cached-project.outputs.cache-hit != 'true'
-      - name: Install test-project
-        run: |
-          cd ~/.poetry/store/test-project
-          export POETRY_CACHE_DIR=$HOME/.poetry/store
-          make install
-        if: steps.cached-project.outputs.cache-hit != 'true'
-  template-metrics:
-    needs: generate
+          $POETRY_HOME/bin/poetry run fastapi-mvc new --skip-install --repo-url https://github.com/rszamszur/fastapi-mvc-example fastapi-mvc-example
+          $POETRY_HOME/bin/poetry lock --no-update
+          echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+        if: steps.cached-fastapi-mvc-example.outputs.cache-hit != 'true'
+      - name: Push fastapi-mvc-example
+        uses: cpina/github-action-push-to-another-repository@main
+        if: steps.cached-fastapi-mvc-example.outputs.cache-hit != 'true'
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source-directory: ./fastapi-mvc-example
+          destination-github-username: 'rszamszur'
+          destination-repository-name: 'fastapi-mvc-example'
+          user-email: github@rsd.sh
+          commit-message: ${{ format('[skip ci][bot][{0}] Update generated project', env.SHORT_SHA) }}
+          target-branch: master
+      - name: Dispatch fastapi-mvc-example CI workflow
+        uses: codex-/return-dispatch@v1
+        if: steps.cached-fastapi-mvc-example.outputs.cache-hit != 'true'
+        id: return_dispatch
+        with:
+          token: ${{ secrets.API_TOKEN_GITHUB }}
+          repo: fastapi-mvc-example
+          owner: rszamszur
+          ref: master
+          workflow: main.yml
+      - name: Await dispatched workflow
+        uses: Codex-/await-remote-run@v1
+        if: steps.cached-fastapi-mvc-example.outputs.cache-hit != 'true'
+        with:
+          token: ${{ secrets.API_TOKEN_GITHUB }}
+          repo: fastapi-mvc-example
+          owner: rszamszur
+          run_id: ${{ steps.return_dispatch.outputs.run_id }}
+          run_timeout_seconds: 600
+          poll_interval_ms: 5000
+  combine-coverage:
+    needs: [project-template-ci, unit-tests, integration-tests]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
-
-    steps:
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Load test-project cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.poetry
-          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-      - name: Run metrics checks
-        run: |
-          cd ~/.poetry/store/test-project
-          make metrics
-  template-unit-tests:
-    needs: generate
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Load test-project cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.poetry
-          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-      - name: Run unit tests
-        run: |
-          cd ~/.poetry/store/test-project
-          make unit-test
-  template-integration-tests:
-    needs: generate
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Load test-project cache
-        uses: actions/cache@v2
+          python-version: 3.9
+      - name: Load Poetry cache
+        uses: actions/cache@v3
         with:
-          path: ~/.poetry
-          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-      - name: Run integration tests
-        run: |
-          cd ~/.poetry/store/test-project
-          make integration-test
-  coverage:
-    needs: generate
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '3.7', '3.8', '3.9', '3.10' ]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+          path: ${{ env.POETRY_HOME }}
+          key: ${{ runner.os }}-3.9-${{ hashFiles('./pyproject.toml') }}-${{ hashFiles('./poetry.lock') }}
+      - name: Run fastapi-mvc coverage
+        run: $POETRY_HOME/bin/poetry run pytest --cov-config=.coveragerc --cov=fastapi_mvc --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
+      - name: Download fastapi-mvc-coverage
+        uses: dawidd6/action-download-artifact@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Load test-project cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.poetry
-          key: project-${{ matrix.python-version }}-${{ hashFiles('**/*.py') }}
-      - name: Config path and poetry
-        run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
-          $HOME/.poetry/bin/poetry config cache-dir $HOME/.poetry/store
-      - name: Run package coverage
-        run: poetry run pytest --cov-config=.coveragerc --cov=fastapi_mvc --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
-      - name: Run template coverage
-        run: |
-          cd ~/.poetry/store/test-project
-          poetry run pytest --cov-config=.coveragerc --cov=test_project --cov-fail-under=90 --cov-report=xml --cov-report=term-missing tests
-          mv coverage.xml $GITHUB_WORKSPACE/coverage-template.xml
+          github_token: ${{ secrets.API_TOKEN_GITHUB }}
+          workflow: main.yml
+          workflow_conclusion: success
+          name: coverage
+          path: /tmp
+          branch: master
+          repo: rszamszur/fastapi-mvc-example
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
           fail_ci_if_error: true
-          files: ./coverage.xml,./coverage-template.xml
+          files: ./coverage.xml,/tmp/coverage.xml
