--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Configure env
         run: |
-          echo "pkg_build=fastapi_mvc-$(cat TAG)-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
-          echo "docs_build=docs-$(cat TAG)-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
+          echo "pkg_build=fastapi_mvc-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
+          echo "docs_build=docs-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
       - name: Download build artifact
         uses: dawidd6/action-download-artifact@v2
         with:
