--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -35,7 +35,7 @@ jobs:
           name: fastapi-mvc
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Install make
-        run: nix-env -i gnumake
+        run: nix-env -i gnumake -f '<nixpkgs>'
       - name: Build fastapi-mvc
         run: make build
       - name: Build container image
@@ -60,7 +60,7 @@ jobs:
           name: fastapi-mvc
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Install make
-        run: nix-env -i gnumake
+        run: nix-env -i gnumake -f '<nixpkgs>'
       - name: Run fastapi-mvc metrics checks
         run: make metrics
       - name: Run fastapi-mvc unit-tests
