Update workflow triggers

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -1,6 +1,12 @@
 name: ❄️ Nix CI ❄️
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
