--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "fastapi-mvc"
-version = "0.15.0"
+version = "0.16.0"
 description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
-authors = ["Radosław Szamszur <radoslawszamszur@gmail.com>"]
+authors = ["Radosław Szamszur <github@rsd.sh>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/fastapi-mvc/fastapi-mvc"
