--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,18 +31,18 @@ cookiecutter = "~2.1.1"
 click = "~8.1.3"
 
 [tool.poetry.dev-dependencies]
-pytest = "~6.2.5"
-pytest-cov = "~2.12.0"
+pytest = "~7.1.3"
+pytest-cov = "~4.0.0"
 pytest-cookies = "~0.6.1"
-flake8 = "3.9.2"
+flake8 = "~5.0.4"
 flake8-docstrings = "~1.6.0"
 flake8-import-order = "~0.18.1"
 flake8-todo = "^0.7"
-black = "^22.3.0"
+black = "~22.8.0"
 mock = "^4.0.3"
-Sphinx = "^4.5.0"
-Pallets-Sphinx-Themes = "^2.0.2"
-myst-parser = "^0.17.2"
+Sphinx = "~5.2.3"
+Pallets-Sphinx-Themes = "~2.0.2"
+myst-parser = "~0.18.1"
 
 [tool.poetry.scripts]
 fastapi-mvc = "fastapi_mvc.cli.cli:cli"
