--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,12 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
-cookiecutter = "~2.1.1"
 click = "~8.1.3"
+copier = "6.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "~7.1.3"
 pytest-cov = "~4.0.0"
-pytest-cookies = "~0.6.1"
 flake8 = "~5.0.4"
 flake8-docstrings = "~1.6.0"
 flake8-import-order = "~0.18.1"
